--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,103 +1,127 @@
 .footer {
-    background-color: #fff;
-    padding: 40px 80px;
-    font-family: 'Arial', sans-serif;
-    color: #222;
-    border-top: 1px solid #eee;
-  }
-  
-  .footer-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 40px;
-    max-width: 1440px;
-    margin: 0 auto;
-  }
-  
-  .footer-col {
-    flex: 1;
-    min-width: 200px;
-  }
-  
-  .logo-col img.footer-logo {
-    width: 40px;
-    margin-bottom: 10px;
-  }
-  
-  .footer-col h4 {
-    font-size: 16px;
-    margin-bottom: 15px;
-    color: #000;
-  }
-  
-  .footer-col ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .footer-col ul li {
-    margin-bottom: 10px;
-  }
-  
-  .footer-col ul li a {
-    text-decoration: none;
-    color: #222;
-    font-size: 14px;
-    transition: color 0.3s ease;
-  }
-  
-  .footer-col ul li a:hover {
-    color: #ff6b00;
-  }
-  
-  .footer-col p {
-    font-size: 14px;
-    margin-bottom: 10px;
-    display: flex;
-    align-items: center;
-    gap: 8px;
-  }
-  .social-icons-footer {
-    display: flex;
-    gap: 10px;
-  }
-  
-  .social-icons a {
-    margin-right: 10px;
-    color: #222;
-    padding: 8px;
-    border-radius: 6px;
-    display: inline-block;
-    transition: background 0.3s ease;
-  }
+  background-color: #fff;
+  padding: 40px 80px;
+  font-family: "Arial", sans-serif;
+  color: #222;
+  border-top: 1px solid #eee;
+}
 
-  .footer-col-social {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    gap: 20px;
-  }
-  .footer-col-wrapper {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  /* .social-icons a:hover {
+.footer-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 40px;
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.footer-col {
+  flex: 1;
+  min-width: 200px;
+}
+
+.logo-col img.footer-logo {
+  width: 40px;
+  margin-bottom: 10px;
+}
+
+.footer-col h4 {
+  font-size: 16px;
+  margin-bottom: 15px;
+  color: #000;
+}
+
+.footer-col ul {
+  list-style: none;
+  padding: 0;
+  width: 100%;
+}
+
+.footer-col ul li {
+  margin-bottom: 10px;
+}
+
+.footer-col ul li a {
+  text-decoration: none;
+  color: #222;
+  font-size: 14px;
+  transition: color 0.3s ease;
+}
+
+.footer-col ul li a:hover {
+  color: #ff6b00;
+}
+
+.footer-col p {
+  font-size: 14px;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.social-icons-footer {
+  display: flex;
+  gap: 10px;
+}
+
+.social-icons a {
+  margin-right: 10px;
+  color: #222;
+  padding: 8px;
+  border-radius: 6px;
+  display: inline-block;
+  transition: background 0.3s ease;
+}
+
+.footer-col-social {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 20px;
+}
+.footer-col-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+
+}
+
+/* .social-icons a:hover {
     background: #ff6b00;
     color: #fff;
   } */
-  
-  .footer-bottom {
-    text-align: center;
-    margin-top: 30px;
-    font-size: 13px;
-    color: #777;
+
+.footer-bottom {
+  text-align: center;
+  margin-top: 30px;
+  font-size: 13px;
+  color: #777;
+}
+
+@media (max-width: 730px) {
+  .footer {
+    padding: 40px 40px;
   }
-  
-  @media (max-width:730px) {
-    .footer {
-      padding: 40px 40px;
-    }
+}
+
+@media (max-width: 440px) {
+  .footer {
+    padding: 30px 30px;
   }
+  .footer-col-wrapper {
+    display: flex;
+    width: 100%;
+    gap: 20px;
+
+  }
+  .footer-col{
+    width: 40%;
+    min-width: 150px;
+    display: flex;
+    flex-direction: column;
+  }
+  .footer-col {
+    flex: 0;
+  }
+}
+
