--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -101,7 +101,7 @@
 }
 
 .login-container {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   display: flex;
   justify-content: center;
   align-items: center;
