--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -135,14 +135,14 @@
   .nav-links {
     position: fixed;
     top: 0;
-    right: -70%;
+    right: -50%;
     height: 100vh;
     width: 30%;
     background-color: white;
     flex-direction: column;
     align-items: flex-start;
-    padding: 2rem;
-    gap: 1.5rem;
+    padding: 1rem;
+    gap: 1rem;
     transition: right 0.3s ease-in-out;
     z-index: 10;
   }
@@ -160,6 +160,9 @@
 }
 @media (max-width:470px) {
   .nav-links{
-    width: 45%;
+    width: 35%;
+  }
+  .navbar {
+    padding: 10px 20px;
   }
 }
