--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -114,7 +114,7 @@
   background-color: #fff;
   padding: 40px;
   border-radius: 12px;
-  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1); */
   width: 100%;
   max-width: 540px;
 }
