--- a/src/Pages/AboutUs/AboutUS.css
+++ b/src/Pages/AboutUs/AboutUS.css
@@ -1,7 +1,7 @@
 .about-us-intro {
   width: 100%;
-  margin-top: 50px;
-  padding: 80px 80px;
+  margin: 80px 0;
+  padding:0px 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -9,6 +9,7 @@
 }
 .about-us-left {
   width: 50%;
+  padding-bottom: 40px;
 }
 
 .about-us-left h2 {
@@ -18,20 +19,21 @@
 
 .about-us-right {
   width: 50%;
+  padding-bottom: 40px;
 }
 
 .about-us-right p {
   font-size: 16px;
   line-height: 1.6;
   color: #555;
+
 }
 
 /* frfgrg */
 
 .ag-section-wrapper {
-  padding: 40px;
+  padding: 0 80px;
   font-family: "Segoe UI", sans-serif;
-  background-color: #f9fafb;
   color: #333;
 }
 
@@ -41,16 +43,16 @@
 }
 
 .ag-section-title {
-  font-size: 24px;
+  font-size: 30px;
   margin-bottom: 10px;
   color: #222;
 }
 
 .ag-section-subtitle {
-  font-size: 14px;
+  font-size: 16px;
   color: #666;
   max-width: 800px;
-  margin-bottom: 20px;
+  margin-bottom: 60px;
 }
 
 .ag-card-container {
@@ -110,15 +112,27 @@
   .about-us-intro {
     flex-direction: column;
     gap: 20px;
+    margin-top: 0px;
+    gap: 20px;
+    padding: 40px;
+    margin-top: 20px;
+    margin-bottom: 0;
   }
   .about-us-left {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-bottom: 0px;
   }
   .about-us-right {
     width: 100%;
+    justify-content: center;
+    padding: 5px;
+  }
+  .ag-section-wrapper {
+    margin-top: 50px;
+    padding: 0 40px;
   }
 }
 
@@ -126,4 +140,34 @@
   .ag-card-container {
     grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
   }
+}
+
+@media (max-width: 480px) {
+  .about-us-left h2 {
+    font-size: 26px;
+  }
+  .about-us-left{
+    display: flex;
+    justify-content: flex-start;
+  }
+  .about-us-intro {
+    padding: 20px;
+    margin-top: 20px;
+  }
+  .ag-card-container{
+    gap: 20px;
+  }
+  .ag-card{
+    padding: 25px;
+  }
+  .ag-achievements-section,
+.ag-goals-section {
+  margin-bottom: 0;
+}
+.ag-section-wrapper {
+  padding: 0 20px;
+}
+.ag-section-title {
+  margin-top: 20px;
+}
 }
