--- a/src/Pages/Courses/Courses.css
+++ b/src/Pages/Courses/Courses.css
@@ -1,7 +1,7 @@
 .courses-intro {
   width: 100%;
-  margin-top: 50px;
-  padding: 80px 80px;
+  margin:80px 0;
+  padding:0 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -9,6 +9,7 @@
 }
 .courses-left {
   width: 50%;
+  padding-bottom: 40px;
 }
 
 .courses-left h2 {
@@ -18,6 +19,7 @@
 
 .courses-right {
   width: 50%;
+  padding-bottom: 40px;
 }
 
 .courses-right p {
@@ -43,8 +45,9 @@
     .courses-intro {
       flex-direction: column;
       gap: 20px;
-      padding: 50px;
-      margin-top: 30px;
+      padding: 40px;
+      margin-top: 20px;
+      margin-bottom: 0;
     }
     
     .courses-left {
@@ -52,10 +55,21 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      padding-bottom: 0px;
     }
     .courses-right {
       width: 100%;
+      justify-content: center;
+      padding: 5px;
     }
   }
   
-  
+  @media (max-width:480px) {
+    .courses-left h2 {
+      font-size: 26px;
+    }
+    .courses-intro {
+      padding: 20px;
+      margin-top: 20px;
+    }
+  }
