--- a/src/Pages/OpenCourses/OpenCourses.css
+++ b/src/Pages/OpenCourses/OpenCourses.css
@@ -1,7 +1,7 @@
 .open-courses-intro {
   width: 100%;
-  margin-top: 50px;
-  padding: 80px 80px;
+  margin: 80px 0;
+  padding: 0 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -9,6 +9,7 @@
 }
 .open-courses-left {
   width: 50%;
+  padding-bottom: 40px;
 }
 
 .open-courses-left h2 {
@@ -18,6 +19,7 @@
 
 .open-courses-right {
   width: 50%;
+  padding-bottom: 40px;
 }
 
 .open-courses-right p {
@@ -30,14 +32,14 @@
 }
 
 .course-page {
-    display: grid;
-    grid-template-columns: repeat(2, minmax(320px, 1fr));
-    gap: 20px;
-    background-color: #f9f9f9;
-    width: 100%;
-    margin: 80px 0;
-    padding: 20px 40px;
-  }
+  display: grid;
+  grid-template-columns: repeat(2, minmax(320px, 1fr));
+  gap: 20px;
+  background-color: #f9f9f9;
+  width: 100%;
+  margin: 80px 0;
+  padding: 20px 40px;
+}
 /* vguh */
 @media (max-width: 1214px) {
   .open-courses-left h2 {
@@ -47,31 +49,43 @@
     font-size: 14px;
   }
 }
+
+@media (max-width: 830px) {
+  .course-page {
+    grid-template-columns: repeat(1, minmax(320px, 1fr));
+  }
+}
 @media (max-width: 768px) {
   .open-courses-intro {
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     gap: 20px;
+    padding: 40px;
+    margin-top: 20px;
+    margin-bottom: 0;
   }
   .open-courses-left {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-bottom: 0px;
   }
   .open-courses-right {
     width: 100%;
+    justify-content: center;
+    padding: 5px;
   }
 }
 
-@media (max-width:830px) {
-    .course-page {
-        grid-template-columns: repeat(1, minmax(320px, 1fr));
-    }
-}
-
-@media (max-width:390px) {
-    .open-courses-intro{
-        padding: 40px;
-        margin-top: 40px;
-    }
+@media (max-width: 480px) {
+  .open-courses-left {
+    display: flex;
+    justify-content: flex-start;
+  }
+  .open-courses-intro {
+    padding: 20px;
+    margin-top: 20px;
+  }
 }
