--- a/src/Pages/Register/Register.css
+++ b/src/Pages/Register/Register.css
@@ -9,9 +9,12 @@
 .testimonial-section {
   background-color: #f9f9f9;
   padding: 40px 20px;
-  font-family: sans-serif;
   max-width: 660px;
-  width: 100%;  
+  width: 100%;
+  flex: 1;
+}
+.testimonial-header {
+  width: 100%;
 }
 
 .testimonial-header h2 {
@@ -90,22 +93,30 @@
   align-items: center;
   justify-content: center;
 }
+
+.nav-btn:hover {
+  background-color: orange;
+  transition: all 0.3s;
+  color: #ffffff;
+}
+
 /* njktnhjtknhbtkjr */
 
 .register-container {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #f5f5f5;
-  order:1;
+  order: 1;
+  flex: 1;
 }
 
 .register-box {
   background-color: #fff;
   padding: 40px;
   border-radius: 12px;
-  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1); */
   width: 100%;
   max-width: 540px;
 }
@@ -153,7 +164,7 @@
 
 .password-wrapper .eye-icon {
   position: absolute;
-  top: 10px;
+  top: 15px !important;
   right: 12px;
   cursor: pointer;
   font-size: 16px;
@@ -248,27 +259,53 @@
   margin-left: 5px;
 }
 
-
 /* kjebgjrkgbr */
 
-@media (max-width:750px) {
+@media (max-width: 750px) {
   .register-wrapper {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    margin-top: 40px;
+    margin-bottom: 10px;
+    padding: 10px 25px;
   }
-  .register-wrapper {
-   padding: 15px;
-   
-  } 
   .register-box {
     max-width: 800px;
     width: 100%;
   }
   .testimonial-section {
-    order:2;
+    order: 2;
+    padding: 30px 20px !important;
   }
   .register-container {
-    order:1;
+    order: 1;
+  }
+  .register-title {
+    font-size: 24px;
+    margin-bottom: 5px;
+  }
+  .register-form input[type="text"],
+  .register-form input[type="email"],
+  .register-form input[type="password"] {
+    padding: 12px;
+    margin: 1px 0px;
+  }
+  .register-form label {
+    font-size: 14px;
+    padding-top: 4px;
+  }
+  .checkbox-container {
+    margin-top: 10px !important;
+    margin-bottom: 15px !important;
+  }
+  .register-form .divider {
+    margin: 15px 0;
+  }
+  @media (max-width: 470px) {
+    .register-wrapper {
+      padding: 10px;
+      margin-top: 10px;
+    }
   }
 }
