--- a/src/Pages/Register/Register.css
+++ b/src/Pages/Register/Register.css
@@ -17,6 +17,23 @@
   width: 100%;
 }
 
+.error {
+  color: red;
+  font-size: 14px;
+  margin-bottom: 10px;
+  display: block;
+}
+
+.input-error {
+  border: 1px solid red;
+}
+.error-message {
+  color: red;
+  font-size: 0.8rem;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  display: block;
+}
 .testimonial-header h2 {
   font-size: 26px;
   margin-bottom: 10px;
