--- a/src/components/YouTubePlayer/YouTubePlayer.css
+++ b/src/components/YouTubePlayer/YouTubePlayer.css
@@ -1,5 +1,6 @@
 .youtube-wrapper {
     max-width: 1280px;
+    width: 90%;
     margin: 0 auto;
     border-radius: 12px;
     overflow: hidden;
@@ -41,6 +42,7 @@
     position: relative;
     padding-bottom: 56.25%; /* 16:9 ratio */
     height: 0;
+    width: 100%;
   }
   
   .video-container iframe {
