--- a/src/Pages/Contact/Contact.css
+++ b/src/Pages/Contact/Contact.css
@@ -139,6 +139,8 @@ textarea {
   font-size: 24px;
   display: block;
   margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
 }
 
 .social-icons {
