--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -1,3 +1,8 @@
+.login-wrap-section {
+  margin-top: 80px;
+  margin-bottom: 50px;
+}
+
 .login-wrapper {
   display: flex;
   justify-content: space-between;
@@ -5,6 +10,7 @@
   margin-top: 80px;
   margin-bottom: 50px;
   padding: 0px 80px;
+  width: 100%;
 }
 
 .testimonial-section {
