--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -30,6 +30,7 @@
   gap: 24px;
   margin: 0;
   padding: 0;
+  white-space: nowrap;
 }
 
 .nav-link {
@@ -97,11 +98,65 @@
   z-index: 5;
 }
 
+.user-dropdown {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.user-name {
+  background-color: #f1f1f1;
+  padding: 8px 12px;
+  border-radius: 6px;
+  font-weight: 600;
+  transition: background-color 0.3s ease;
+}
+
+.user-name:hover {
+  background-color: #ddd;
+}
+
+.dropdown-menu {
+  position: absolute;
+  top: 110%;
+  right: 0;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  min-width: 180px;
+  z-index: 1000;
+}
+
+.dropdown-menu p {
+  margin: 0;
+  font-size: 14px;
+  color: #555;
+  margin-bottom: 8px;
+}
+
+.logout-btn {
+  width: 100%;
+  background-color: #ff4d4d;
+  border: none;
+  color: white;
+  padding: 8px;
+  border-radius: 5px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.logout-btn:hover {
+  background-color: #e60000;
+}
+
 /* fnjrgbjr */
 
 @media (max-width: 1214px) {
   .nav-link {
-    font-size: 12px;
+    font-size: 14px;
   }
   .logo {
     width: 30px;
@@ -121,21 +176,11 @@
     font-size: 12px;
   }
   .navbar-left {
-    width: 60%;
-  }
-  
-}
-
-@media (max-width:1010px) {
-  .navbar-left {
-    width: 90%;
+    width: 200px;
   }
 }
 
 @media (max-width: 888px) {
-  .navbar-left {
-    width: 80%;
-  }
   .nav-links {
     display: flex;
     list-style: none;
@@ -150,7 +195,6 @@
     top: 0;
     right: -50%;
     height: 100vh;
-    width: 30%;
     background-color: white;
     flex-direction: column;
     align-items: flex-start;
@@ -162,6 +206,7 @@
 
   .nav-links.open {
     right: 0;
+    width: 200px;
   }
 
   .menu-toggle {
@@ -171,10 +216,7 @@
     padding: 10px 40px;
   }
 }
-@media (max-width:470px) {
-  .nav-links{
-    width: 35%;
-  }
+@media (max-width: 470px) {
   .navbar {
     padding: 10px 20px;
   }
